--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,3 +1,8 @@
+header{
+    background: white;
+    margin-bottom: 5vh;
+}
+
 .navbar{
 
     &:after{
@@ -40,7 +45,6 @@
             text-align: center;
             margin-right: 10%;
             padding: 10px;
-            width: 25%;
 
         }
         .navbar_div--right_avatarWrapper{
