--- a/src/scss/_editGnome.scss
+++ b/src/scss/_editGnome.scss
@@ -3,6 +3,26 @@
 .editGnome{
     display:flex;
     margin-left: 30%;
-    background: white;
+    margin-top:15%;
+    width: 40%;
     flex-direction: column;
+    align-items: center;
+
+    .button{
+        margin: 0 auto;
+    }
+
+    input{
+        margin-bottom: 1%;
+
+        padding: 10px;
+        border: solid 1px #fff;
+        box-shadow: inset 1px 1px 2px 0 #707070;
+        transition: box-shadow 0.5s;
+
+        &.button{
+            margin-top: 2%;
+            padding: 0 3%;
+        }
+    }
 }
