--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
 $container_width: 1200px;
-$backgroundColor: #EDEEF2;
+$backgroundColor: #F9FAFC;
+$secondHealthBarColor: #EDEEF2;
 $buttons_healthBarColor: #AF0075;
 $secondary_healthBarColor: #D8A6CB;
