--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 
 body{
     background: $backgroundColor;
+    font-family: 'Work Sans', sans-serif;
 }
 .container{
     max-width: $container_width;
