--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -9,9 +9,15 @@
     padding: 0 3%;
     display: inline-block;
     line-height: 2em;
-    font-size:15px;
+    font-weight: 700;
 }
 
 .loadMore{
-    margin-left:40%;
+
+    margin: 1% 40% 3% 45%;
+    font-size: 15px;
+
+    &:active{
+        background:green;
+    }
 }
