--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,3 +3,4 @@ $backgroundColor: #F9FAFC;
 $secondHealthBarColor: #EDEEF2;
 $buttons_healthBarColor: #AF0075;
 $secondary_healthBarColor: #D8A6CB;
+$buttons_HoverColor: gray;
