--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,5 @@ $secondHealthBarColor: #EDEEF2;
 $buttons_healthBarColor: #AF0075;
 $secondary_healthBarColor: #D8A6CB;
 $buttons_HoverColor: gray;
+$spinner_dot1Color: #AF0075;
+$spinner_dot2Color: orangered;
